Use <Number>.valueOf() instead of new <Number>()